--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,6 @@ body {
 
 #title {
     font-size: 60px;
-    font-family: 'Kdam Thmor Pro', sans-serif;
 }
 
 ul {
@@ -98,12 +97,39 @@ ul li:hover, #recordsBackButton:hover {
     align-items: center;
 }
 
-span {
-    margin-right: 10px;
-    color: gold;
+.lds-dual-ring {
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+}
+.lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6px solid #fff;
+    border-color: #fff transparent #fff transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 p {
     text-align: center;
     color: rgb(229, 146, 21);
+    
+}
+
+span {
+    margin-right: 10px;
+    color: gold;
 }
